# CS50Rust

./: Cargo.toml  README.md
caesar/: caesar.rs
cash/: cash  cash.rs
credit/: credit
exercises/caesar/: caesar
exercises/cash/: cash.rs
exercises/credit/: credit.rs
exercises/mario-less/: mario.rs
exercises/mario-more/: mario.rs
exercises/me/: hello.rs
exercises/plurality/: plurality  plurality.rs
exercises/scrabble/: scrabble  scrabble.rs
exercises/world/: hello_world
mario-less/: mario  mario.rs
mario-more/: mario  mario.rs
me/: hello  hello.rs
readability/: readability
src/: lib.rs
substitution/: substitution
weeks/week_1/cash/: cash.rs
weeks/week_1/mario-less/: mario.rs
weeks/week_1/me/: hello.rs
weeks/week_2/readability/: readability.rs
weeks/week_2/substitution/: substitution.rs
