[package]
name = "cs50rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hello_world"
path = "weeks/week_1/world/hello_world.rs"

[[bin]]
name = "me"
path = "weeks/week_1/me/hello.rs"

[[bin]]
name = "mario-less"
path = "week/week_1/mario-less/mario.rs"

[[bin]]
name = "mario-more"
path = "week/week_1/mario-more/mario.rs"

[[bin]]
name = "cash"
path = "week/week_1/cash/cash.rs"

[[bin]]
name = "credit"
path = "week/week_1/credit/credit.rs"
